final program kecuali index

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -37,7 +37,7 @@
         Logout
       </button>
     </form>
-    Signed in as <%=users[user_id].email%>
+    Signed in as <%=email%>
   <% } %>
 
 </div>
